# FyDM

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
src/: __init__.py
src/FyDM/: __init__.py  fdm.py
src/FyDM/__backend/: __init__.py  fdm_.py
src/FyDM/specials/: __init__.py  heat_equation.py
