[metadata]
name = FyDM
version = 0.1.0
url = https://github.com/syedalimohsinbukhari/FyDM
author = Syed Ali Mohsin Bukhari, Astrophysics and Python
author_email = syedali.b@outlook.com, astrophysicsandpython@gmail.com
license = MIT
license_files = LICENSE
description = A python based Finite Difference Method (FDM) library.
long_description = file: README.md
long_description_content_type = "text/markdown"

[options]
package_dir =
    = src

packages = find:
python_requires = ">= 3.9"

install_requires =
    numpy~=1.26.0
    setuptools~=68.0.0

[options.packages.find]
where = src

classifiers =
    License :: OSI Approved :: CC License
    Programming Language :: Python :: 3.9
